sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:6: error: ')' expected but ';' found.
      echange(a;a-1)
               ^AlgGnomeSort:6: error: ';' expected but ')' found.
      echange(a;a-1)
                   ^